admission responsive done

--- a/ANNOUNCEMENT.html
+++ b/ANNOUNCEMENT.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -104,33 +104,13 @@
         </section>
         <div id="specificContent">
             <div class="generalinfo" >
-                <h2 style="margin-bottom: 40px;">Announcement</h2>
-                <div class="notices_info">
-                    <div class="notice_lists">
-                        <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-                    </div>
-                    <div class="notice_lists">
-                        <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-                    </div>
-                    <div class="notice_lists">
-                        <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-                    </div>
-                    <div class="notice_lists">
-                        <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-                    </div>
-                    <div class="notice_lists">
-                        <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-                    </div>
-                    <div class="notice_lists">
-                        <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf" target="_blank">Democracy And Election</a>
-                    </div>
-                    </div>
+                <h2 style="margin-bottom: 30px;">Announcement</h2>
+                <div class="industrial_visit_links"  style="margin-top:40px;">
+                    
+                    <img src="vector 2.png">
+                    <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ADMISSION%2FGen%20info%2024-25.pdf?alt=media&token=d814cb40-5369-444f-b0e1-6ff2745f17f0" class="prior">Revised Admission Schedule for Online Counseling(Updated on 19 Jul)</a>
+                    
+                </div>
             </div>    
         </div>
     </div>
