--- a/Admission1.html
+++ b/Admission1.html
@@ -87,7 +87,7 @@
         </div>
         <div class="rectangle_blue"></div>
         <div class="about_image">
-            <img src="./assets/home/b.png" style="border-radius: 16px;">
+            <img src="./assets/home/aitmain.jpg" style="border-radius: 16px;">
         </div>
     </div>
     <div class="main">
