--- a/ResearchDean.html
+++ b/ResearchDean.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2F1R9A2889.JPG?alt=media&token=7c80fa5b-d84f-44c2-91b6-4b8450578f53">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
