--- a/aboutus/life.html
+++ b/aboutus/life.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <br>
-            <a href="LIBRARY_E_LIB.html#specificContent"><button id="but">Learn more</button></a>
+            <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2F1R9A2726.JPG?alt=media&token=e1dcc3db-6c7e-46e7-aaca-31f940fce0ac"><button id="but">Learn more</button></a>
         </div>
     </div>
     </div>
