--- a/student.html
+++ b/student.html
@@ -75,7 +75,7 @@
         <!-- </div> -->
         </div>
         <div class="about_image">
-            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2FALUMNI.JPG?alt=media&token=ac684071-08e5-449f-a328-038c0b4d9c05">
+            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2F1R9A2915.JPG?alt=media&token=3c8762fa-a140-44c0-b990-7fd58a1987c4">
         </div>
     </div>
 
