--- a/LIBRARY_E_LIB.html
+++ b/LIBRARY_E_LIB.html
@@ -74,7 +74,7 @@
                 
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2F1R9A2710.JPG?alt=media&token=c73427a7-f508-4b9a-8e40-c4c71129813d">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
