some small changes in department

--- a/ADMIN_AIT.html
+++ b/ADMIN_AIT.html
@@ -90,7 +90,7 @@
                     <div id="hod_content">
                         <h2 class="head_ok">AIT Administration</h2>
                         <div class="hod_text">
-                            <p class="parra1" style="margin-top: 30px; margin-bottom: 20px; font-size: 1rem;">
+                            <p class="parra1" id="admid">
                                 A Retired Officer of the Rank of Brigadier or above posted as Director heads the Institute and looks after Academics as well as Administrative affairs of AIT. A Joint Director, another Retired officer of the Rank of Colonel heads the Administration. Overall organization of AIT is as under:
                             </p>
                             <img src="Mask group.png" alt="" id="hirerchy">
