--- a/Admission1.html
+++ b/Admission1.html
@@ -170,12 +170,9 @@
                             
                         </tbody>
                     </table>
-
-
-
-
-                    <div class="reading_more" style="margin-top: 1.5rem;">
-                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ADMISSION%2FGen%20info%2024-25.pdf?alt=media&token=d814cb40-5369-444f-b0e1-6ff2745f17f0" id="but" style="margin-top: 1.25rem; text-decoration: none;">Read More</a>
+                    <br>
+                    <div class="elib_button" id="E-button">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ADMISSION%2FGen%20info%2024-25.pdf?alt=media&token=d814cb40-5369-444f-b0e1-6ff2745f17f0" id="but" style=" text-decoration: none;">Read More</a>
                     </div>
                 </div> 
             </div>
