--- a/nbastatus.html
+++ b/nbastatus.html
@@ -58,7 +58,7 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">National Board of Accreditation</p>
+                <p class="a" id="overflow_name">National Board of Accreditation</p>
                 <p class="b"> "Empowering Campus Innovation Through Technology." </p>
                 <p class="c"> <a href="#main">Explore</a> </p>
             </div>
