--- a/ADMIN_JD.html
+++ b/ADMIN_JD.html
@@ -120,7 +120,7 @@
                 <div id="hod_content">
                     <h2 class="head_ok">Joint Director’s Corner</h2>
                         <div class="hod_content2" id="jd_pic2">
-                            <div id="jd_pic"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-JD%20pic%2F1R9A2275.jpg?alt=media&token=67eab8a9-8797-42ea-8278-97ad2ffd1778" >
+                            <div id="jd_pic"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2F1R9A2314.JPG?alt=media&token=a416128c-c145-4fe0-b40e-fad4f30a1016" >
                         
                             </div>
                             <div class="hod_contain" id="director_pic">
