--- a/Admission1.html
+++ b/Admission1.html
@@ -23,7 +23,7 @@
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
-            <a href="index.html#department_nav" id="highlight_items">Departments</a>
+            <a href="index.html#department_nav">Departments</a>
             </ul>
           </div>
         </div>
@@ -58,7 +58,7 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Admission</p>
+                <p class="a">Admissions</p>
                 <p class="b"> Engineering is about turning ideas into reality through innovation and practical problem-solving, shaping the future one design at a time. </p>
                 <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
@@ -87,7 +87,7 @@
                 <a href="#" class="fetch-link" data-url="FEE_STRUCTURE.html" data-target-container="mainContent" style="text-decoration: none;">Fees Structure</a>
                 <a href="#" class="fetch-link" data-url="entrance.html" data-target-container="mainContent"  style="text-decoration: none;">Entrance Examination</a>
                 <a href="#" class="fetch-link" data-url="ANNOUNCEMENT.html" data-target-container="mainContent"  style="text-decoration: none;">Announcements</a>
-                <a href="#" class="fetch-link" data-url="Migration.html" data-target-container="mainContent"  style="text-decoration: none;">Migration to Second/Third Year</a>
+                <a href="#" class="fetch-link" data-url="Migration.html" data-target-container="mainContent"  style="text-decoration: none;">Migration to SE/TE</a>
                 <a href="#" class="fetch-link" data-url="ME_admissiom.html" data-target-container="mainContent"  style="text-decoration: none;">Admissions: ME</a>
                 <a href="#" class="fetch-link" data-url="FAQ.html" data-target-container="mainContent"  style="text-decoration: none;">FAQ</a>                
                 <a href="#" class="fetch-link" data-url="CONTACTINFO.html" data-target-container="mainContent"  style="text-decoration: none;">Contact Information</a>
