--- a/PLACEMENT_T&P.html
+++ b/PLACEMENT_T&P.html
@@ -20,7 +20,7 @@
           <div>
             <ul class="header_items">
             <a href="index.html">Home</a>
-            <a href="Alumini.html">Alumini</a>
+            <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html" id="highlight_items">Placements</a>
             <a href="CLUBS.html">Clubs</a>
             <a href="index.html#department_nav">Departments</a>
@@ -58,7 +58,7 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Placement</p>
+                <p class="a">Placements</p>
                 <p class="b"> "Placements link students with employment opportunities, bridging the gap between education and industry." </p>
                 <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
