--- a/ABOUT_US.html
+++ b/ABOUT_US.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="para_containi">
                         <br>
-                        <p>Profile</p><br>
+                        <p class="para_head">Profile</p><br>
                         <div class="para_con">
                             <p style="text-align:justify ;">     Brig Abhay A Bhat, an alumnus of National Defence Academy (NDA) was commissioned into the Corps of Signals in December 1982. He has done his BTech in Electronics and telecommunications from Military College of Telecommunications Engineering, Mhow (MCTE). Brig Bhat has graduated from the prestigious Defence Services Staff College, Wellington, where army officers are trained in the nuances of staff function of various operations. Due to his professional calibre, he was sponsored by the Army to attain M Tech in Computer Science and Engineering from IIT, Kanpur. The officer has also acquired a Master’s degree in Personnel Management from Pune University.
                                 <br><br>
