More Clubs added and Some Pics
More clubs added And faculty Pic

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
       </div>
 
       <div class="card">
-        <img src="./img/campus 2.png" alt="event">
-        <div class="des">
+        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2Fcult.jpg?alt=media&token=130004ef-d895-403d-a774-2fc87f76684d" alt="event" style="width: 100%;">
+        <div class="des" >
           <h4>21 October 2023</h4>
           <p>Cultural Aakriti</p>
         </div>
