--- a/ResearchDean.html
+++ b/ResearchDean.html
@@ -19,7 +19,7 @@
         <div class="topper">
           <div>
             <ul class="header_items">
-            <a href="ABOUT_US.html">About Us</a>
+            <a href="index.html">Home</a>
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
