--- a/index.html
+++ b/index.html
@@ -267,25 +267,25 @@
     </div>
     <div class="row">
       <div class="logo">
-        <div class="logoimg"><img src="hexagon (1).png" alt="logo" height="40px" width="40px"></div>
+        <div class="logoimg"><img style="margin-top:5px" src="./assets/home/mandatory/NIRF_logo.png" alt="logo"></div>
       </div>
       <div class="linkinfo"><u><a href="NIRF.html" style="color: white;">NIRF </a></u></div>
     </div>
     <div class="row">
       <div class="logo">
-        <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
+        <div class="logoimg"><img src="./assets/home/mandatory/nba_logo.jpg" alt="logo" height="40px" width="40px"></div>
       </div>
       <div class="linkinfo"><u> <a style="color: white;" href="nbastatus.html">NBA</a></u></div>
     </div>
     <div class="row">
       <div class="logo">
-        <div class="logoimg"><img src="hexagon (1).png" alt="logo" height="40px" width="40px"></div>
+        <div class="logoimg"><img src="./assets/home/mandatory/NAAC_LOGO.png" alt="logo" height="40px" width="40px"></div>
       </div>
       <div class="linkinfo"><u ><a style="color: white;" href="NAAC_IQAC.html"> NAAC </a></u></div>
     </div>
     <div class="row">
       <div class="logo">
-        <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
+        <div class="logoimg"><img src="./assets/home/mandatory/ariia_logo.png" alt="logo" height="40px" width="40px"></div>
       </div>
       <div class="linkinfo"><u ><a href="ARIIA.html" style="color: white;"> ARIIA </a></u></div>
     </div>
