--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </div>
     <div class="row">
       <div class="logo">
-        <div class="logoimg"><img style="margin-top:5px" src="./assets/home/mandatory/NIRF_logo.png" alt="logo"></div>
+        <div class="logoimg"><img style="margin-top:5px" src="./assets/home/mandatory/NIRF_logo.png" alt="logo" width="40px"></div>
       </div>
       <div class="linkinfo"><u><a href="NIRF.html" style="color: white;">NIRF </a></u></div>
     </div>
@@ -291,7 +291,7 @@
     </div>
     <div class="row">
       <div class="logo">
-        <div class="logoimg"><img src="hexagon (1).png" alt="logo" height="40px" width="40px"></div>
+        <div class="logoimg"><img src="./assets/home/mandatory/NEP_LOGO.jpg" alt="logo" height="40px" width="40px"></div>
       </div>
       <div class="linkinfo"><u > <a href="NEP.html" style="color: white;">NEP </a></u></div>
     </div>
