update man about student

--- a/student.html
+++ b/student.html
@@ -20,7 +20,7 @@
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
-            <a href="ADMIN_AIT.html">Admin</a>
+            <a href="index.html#department_nav">Departments</a>
             </ul>
           </div>
         </div>
