Clubs and faculty pics and home page images
CLubs, Faculty pics, Latest events

--- a/Admission1.html
+++ b/Admission1.html
@@ -146,7 +146,7 @@
                             </tr>
                             <tr id="row2">
                                 <td>2.</td>
-                                <td>Electronic & Telecommunication Engineering</td>
+                                <td>Electronics & Telecommunication Engineering</td>
                                 <td>120</td>
                         
                             </tr>
@@ -164,7 +164,7 @@
                             </tr>
                             <tr id="row5">
                                 <td>5</td>
-                                <td>Automation of Robotics Engineering</td>
+                                <td>Automation & Robotics Engineering</td>
                                 <td>60</td>
                              
                             </tr>
