--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 
 
       <div class="card">
-        <img src="./img/campus 2.png" alt="event">
+        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2Fcrack.JPG?alt=media&token=152a0ed5-275f-4898-9071-84fbf5f66791" alt="event"
+        style="width: 100%;">
         <div class="des">
           <h4>13 February 2024</h4>
           <p>Crack 5.2</p>
