added Pr cell details

--- a/CLUBS.html
+++ b/CLUBS.html
@@ -591,8 +591,7 @@
                 </div>
             </div>
             <div class="clubcontent" id="but1">
-                AIT Open Source Software Club consist of aspiring students who want to learn and develop things using the Open Source methodology. Our main goal is to spread awareness about the goodness of sharing knowledge via contributing to the Open Source Community and making good use of it in the real time applications.
-            </div>
+                AIT's Public Relations Cell manages communication with the public, focusing on alumni relations and promotional activities. It handles social media, event coordination, and organizes the Alumni Meet to reconnect graduates with the college, fostering positive relationships with various stakeholders.            </div>
             <div class="clubcontent" id="but2">
                 <div class="clubcontent" id="but2">
                     <div class="club_content_head">
