some photo added

--- a/ADMIN_Notices.html
+++ b/ADMIN_Notices.html
@@ -122,27 +122,27 @@
                     <div class="notices_info">
                     <div class="notice_lists">
                         <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf">Democracy And Election</a>
+                        <a href="#">Democracy And Election</a>
                     </div>
                     <div class="notice_lists">
                         <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf">Democracy And Election</a>
+                        <a href="h#">Democracy And Election</a>
                     </div>
                     <div class="notice_lists">
                         <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf">Democracy And Election</a>
+                        <a href="#">Democracy And Election</a>
                     </div>
                     <div class="notice_lists">
                         <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf">Democracy And Election</a>
+                        <a href="#">Democracy And Election</a>
                     </div>
                     <div class="notice_lists">
                         <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf">Democracy And Election</a>
+                        <a href="#">Democracy And Election</a>
                     </div>
                     <div class="notice_lists">
                         <div class="date">16 Oct 2023</div>
-                        <a href="https://www.aitpune.com/Documents/ASGE/Circular%20No%20344-2020%20-%20%20Democracy,%20Election%20and%20Governance(2%20Credit),%20%20and%20Introduction%20to%20Constitution(2%20Credits)_12.122020.pdf">Democracy And Election</a>
+                        <a href="#">Democracy And Election</a>
                     </div>
                     </div>
                 </section>   
