--- a/aboutus/lifeait/Banking.html
+++ b/aboutus/lifeait/Banking.html
@@ -37,7 +37,7 @@
         <br>
         <div id="mainContent">
             <div class="library" id="library">
-                <div class="lim" style="background-image: url(https://www.aitpune.com/images/gallery/atm-facility.jpg);"></div>
+                <div class="lim" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/About_US%2F1R9A2749.JPG?alt=media&token=fdf94d14-44f8-49f3-9937-93f03517cafe);"></div>
                 <div class="lic">
                     HDFC is running a 24 hours ATM counter in the academic block.
                 </div>
