--- a/PLACEMENT_T&P.html
+++ b/PLACEMENT_T&P.html
@@ -68,7 +68,7 @@
             <div class="main_content">
                 <h2 class="ab" style="text-align: left;">Mission & Objectives</h2>
                 
-                <p class="about_content">The main purpose of the this Association is to provide an organization through which the Alumni of AIT around the world, and faculty, staff and students of the institute can interact with each other for mutual benefit and to further the objectives outlined in the Mission Statement.
+                <p class="about_content" style="text-align: justify;">The main purpose of the this Association is to provide an organization through which the Alumni of AIT around the world, and faculty, staff and students of the institute can interact with each other for mutual benefit and to further the objectives outlined in the Mission Statement.
 
                     <br>
                     Alumni :To facilitate improvement in networking among alumni by providing a platform for social interactions and enable higher levels of interactions and enable interactions between alumni for mutual benefit in academic and/or business areas.
