--- a/aboutus/lifeait/cafe.html
+++ b/aboutus/lifeait/cafe.html
@@ -36,7 +36,7 @@
         <br>
         <div id="mainContent">
             <div class="library" id="library">
-                <div class="lim" style="background-image: url(https://www.aitpune.com/images/gallery/Open%20Air%20Cafeteria.jpg);"></div>
+                <div class="lim" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/About_US%2F1R9A2449.JPG?alt=media&token=597598ad-aa0a-462e-b702-92d263353e4b);"></div>
                 <div class="lic">
                     In addition to hostel messes, one cafeteria is there within the campus which is an open-air cafeteria next to the academic block.Menu includes North and South Indian, Chinese and Continental cuisine at reasonable rates.
                 </div>
