--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-yXYHgV68INZBx/PzUqLVXDgYS1DHFDLf/Xd/5qEWN5BhAy+hhp2Szr4eZUq0b9Pq9HbLhxYvbiOBbELz+ZIMmw==" />
   <link rel="stylesheet" href="collage.css">
   
-  <title>AIT Website</title>
+  <title>Army Institute Of Technology</title>
+  <link rel="icon" type="image/x-icon" href="AIT LOGO.png">
 </head>
 
 <body>
