Fevicon and Title
Fevicon And Title added on all pages

--- a/nbastatus.html
+++ b/nbastatus.html
@@ -13,6 +13,10 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="IT.css">
 
+
+<title>Army Institute Of Technology</title>
+  <link rel="icon" type="image/x-icon" href="AIT LOGO.png">
+
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
