--- a/ABOUT_US.html
+++ b/ABOUT_US.html
@@ -6,9 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>AIT PUNE</title>
+    
     <link rel="stylesheet" href="student.css">
     <link rel="stylesheet" href="trans.css">
+
+    <title>Army Institute Of Technology</title>
+  <link rel="icon" type="image/x-icon" href="AIT LOGO.png">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
