--- a/student.html
+++ b/student.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     
-    <title>AIT PUNE - STUDENTS</title>
+    <title>Army Institute Of Technology</title>
+    <link rel="icon" type="image/x-icon" href="AIT LOGO.png">
     <link rel="stylesheet" href="student.css">
     <link rel="stylesheet" href="trans.css">
 </head>
