--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -333,6 +333,9 @@
       </div>
   
     </div>
+      <div class="copyright">Copyright ©2018 All Rights Reserved | Army Institute of Technology, Pune || Site Updated On :25 Jan 2024</div>
+
+  <div class="extra"></div>
     <script src="script.js"></script>
     <script src="buttons.js"></script>
     <script>
