button problem resolved

--- a/index.html
+++ b/index.html
@@ -74,14 +74,16 @@
         <div class="slide slide3"></div>
         <!-- add more images above -->
       </div>
-      <button id="prevBtn" onclick="prevSlide()">&#10094;</button>
-      <button id="nextBtn" onclick="nextSlide()">&#10095;</button>
       <div class="dot-container" id="dotContainer"></div>
     </div>
     <div class="show">
       <p class="a">Admissions 2023-24</p>
       <p class="b"> March into Excellence: Forge Your Future at Army Institute of Technology! </p>
       <p class="c"> <a href="Admission1.html">Learn More</a> </p>
+      <div class="but">
+        <button id="prevBtn" onclick="prevSlide()">&#10094;</button>
+        <button id="nextBtn" onclick="nextSlide()">&#10095;</button>
+      </div>
     </div>
   </div>
 
