some photo changes

--- a/Admission1.html
+++ b/Admission1.html
@@ -78,7 +78,7 @@
                 
             </div>
             <div class="about_image">
-                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2FGp%20Photo%202249%20copy.jpg?alt=media&token=4880c558-0811-4002-9d19-97b112070356">
+                <img src="./assets/home/aitcampus.jpg">
             </div>
           
         </div>
@@ -178,6 +178,8 @@
                     <div class="elib_button" id="E-button">
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ADMISSION%2FGen%20info%2024-25.pdf?alt=media&token=d814cb40-5369-444f-b0e1-6ff2745f17f0" id="but" style=" text-decoration: none;">Read More</a>
                     </div>
+                    <br>
+                    <br>
                 </div> 
             </div>
         </div> 
