--- a/NAAC_DVV.html
+++ b/NAAC_DVV.html
@@ -110,11 +110,11 @@
                        
                     <div class="project_link" id="achieve_list">
                         <img src="vector 3.png" alt="">
-                        <a href="NAAC_DVV1.html" >NAAC-SSR-DVV - For Extended Profile Deviations</a>
+                        <a href="undermaintain.html" >NAAC-SSR-DVV - For Extended Profile Deviations</a>
                     </div>
                     <div class="project_link">
                         <img src="vector 3.png" alt="">
-                        <a href="NAAC_DVV2.html" >NAAC-SSR-DVV - For Metric Profile Deviations</a>
+                        <a href="undermaintain.html" >NAAC-SSR-DVV - For Metric Profile Deviations</a>
                     </div>
                 </div>
             </div>    
