--- a/aboutus/lifeait/hostel.html
+++ b/aboutus/lifeait/hostel.html
@@ -36,7 +36,7 @@
         <br>
         <div id="mainContent">
             <div class="library" id="library">
-                <div class="lim" style="background-image: url(https://www.aitpune.com/images/hostel/Vishwesvariya%20Hostel.jpg);"></div>
+                <div class="lim" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/About_US%2FHOSTEL.png?alt=media&token=ed0ec65e-6f69-470f-b380-54f431f15346);"></div>
                 <div class="lic">
                    AIT offers hostel accommodation for both male and female students pursuing undergraduate and postgraduate studies on the AIT Campus. The hostels, including Abdul Kalam, Vishwesvariya, Homi Bhabha, SN Bose, Sarabhai, Ramanujan, Capt Gurbir Singh, and Kalpana Chawla, provide a total capacity of 1,305. The facilities in the hostel rooms include tube lights, fans, charging points, and furniture for each student. Additional amenities consist of Wi-Fi, RO purified water, solar water heaters, modern bathrooms, a rooftop study hall, 24/7 power backup, and recreational rooms with various entertainment options. AIT emphasizes discipline, strictly prohibiting ragging, smoking, alcohol, and drug consumption. The campus is monitored by hostel wardens and an Anti-Ragging Squad to ensure a safe and conducive environment for all residents. Health facilities, including a 24/7 ambulance, nursing assistant, and visiting doctor, contribute to the overall well-being of the students.
                 </div>
