--- a/aboutus/lifeait/mess.html
+++ b/aboutus/lifeait/mess.html
@@ -36,7 +36,7 @@
         <br>
         <div id="mainContent">
             <div class="library" id="library">
-                <div class="lim" style="background-image: url(https://www.aitpune.com/images/mess-boy.jpg);"></div>
+                <div class="lim" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/About_US%2Fmess.png?alt=media&token=bb07b4b9-bd99-4654-801a-86b65270f854);"></div>
                 <div class="lic">
                     The Students' Mess Committee at AIT takes charge of the menu, ensuring a diverse selection of healthy meals at affordable prices. The kitchen and dining hall are equipped with state-of-the-art gadgets and appliances to support efficient food preparation and service. In addition to offering a variety of dishes, the mess also prioritizes the health and well-being of students by conducting regular medical check-ups for the food handlers, ensuring the overall safety and quality of the meals provided.
                 </div>
