--- a/aboutus/lifeait/sg.html
+++ b/aboutus/lifeait/sg.html
@@ -37,7 +37,7 @@
         <br>
         <div id="mainContent">
             <div class="library" id="library">
-                <div class="lim" style="background-image: url(https://www.aitpune.com/images/sports/sports1.png);"></div>
+                <div class="lim" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/About_US%2Fsportscollage.png?alt=media&token=3fd449ba-b711-48c2-976f-e8d41f75301d);"></div>
                 <div class="lic">
                     The College has a well equipped sports department. In our college Multipurpose Hall for Indoor games i.e. Badminton Court, Squash Court, Table-Tennis, Carom board, Chess, Multi-Gym and Yoga. One cemented Cricket pitches, one ground each for Football, Cricket and Volley ball ground, Two Basketball hard courts, one Tennis Hard court. Timings for Sports activities are Morning 6.00 A.M. to 8.00 A.M. and Evening 5.00 P.M. to 7.00 P.M. for College students and Staff Members. The Sports Equipments / kits are issued to the students during tournaments and college events. The Inter-Branches Tournaments are conducted in various games annually like
                 </div>
