--- a/aboutus/lifeait/shop.html
+++ b/aboutus/lifeait/shop.html
@@ -35,7 +35,7 @@
         <br>
         <div id="mainContent">
             <div class="library" id="library">
-                <div class="lim" style="background-image: url(https://www.aitpune.com/images/gallery/Shopping%20Complex.jpg);"></div>
+                <div class="lim" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/About_US%2Fshopping%20complex.png?alt=media&token=63274a04-17c2-409f-a1b1-ec0e5311b8ec);"></div>
                 <div class="lic">
                     A shopping complex exists within the campus to cater for day to day requirements of the inmates. Stationary, Food, General Stores, Barber Shop, Fruit Shop, Ice-cream Shop and Laundry form part of this complex.
                 </div>
