--- a/NIRF.html
+++ b/NIRF.html
@@ -75,7 +75,7 @@
                 
             </div>
             <div class="about_image">
-                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2Fresearch.JPG?alt=media&token=5712f393-b5e3-489c-be8b-be6e516cc79c">
+                <img src="./assets/home/aitcampus.jpg">
             </div>
         </div>
         
