--- a/nbastatus.html
+++ b/nbastatus.html
@@ -64,7 +64,7 @@
             <div class="show">
                 <p class="a" id="overflow_name">National Board of Accreditation</p>
                 <p class="b"> "Empowering Campus Innovation Through Technology." </p>
-                <p class="c"> <a href="#main">Explore</a> </p>
+                <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
         </div>
        
@@ -78,7 +78,7 @@
 
 
 
-<img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2Fresearch.JPG?alt=media&token=5712f393-b5e3-489c-be8b-be6e516cc79c" style="border-radius: 16px;">
+<img src="./assets/home/aitcampus.jpg" style="border-radius: 16px;">
 
             </div>
         </div>
