--- a/CLUBS.html
+++ b/CLUBS.html
@@ -479,23 +479,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="#" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -552,23 +552,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FFine%20Arts%2FFineArtsClub2022-23.pdf?alt=media&token=d7ba62f8-5bbf-40f3-972e-b12bb7e7fd09" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FFine%20Arts%2FFineArtsClub2021-22.pdf?alt=media&token=b190ba7e-e424-406f-a030-0537894e59a3" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FFine%20Arts%2FFineArtsClub2020-21.pdf?alt=media&token=56a92694-4411-44ee-9a4c-4456e9894d00" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FFine%20Arts%2FFineArtsClub2019-20.pdf?alt=media&token=f4c8297d-6289-4988-b8a3-8a6ae1409a87" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FFine%20Arts%2FFineArtsClub2018-19.pdf?alt=media&token=1d40285f-4218-4c55-86d1-946ead421e5b" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -623,23 +623,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FOSS%20club%2FOpenSourceSoftwareClub2022-23.pdf?alt=media&token=eb3e2fae-2a1b-4d15-be21-913639cf71c8" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FOSS%20club%2FOpenSourceSoftwareClub2021-22.pdf?alt=media&token=6c360777-fcd6-4456-8363-c4a3af3ed7de" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FOSS%20club%2FOpenSourceSoftwareClub2020-21.pdf?alt=media&token=f99a9400-a0ef-4d73-bcd0-8610829c2a0c" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FOSS%20club%2FOpenSourceSoftwareClub2019-20.pdf?alt=media&token=f5009c41-47bb-49c9-b0d7-bfc0a7f32d34" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FOSS%20club%2FOpenSourceSoftwareClub2018-19.pdf?alt=media&token=d4ecba42-45ca-45c0-aa34-dd47ef4e2e49" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -692,23 +692,19 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCycling%20club%2FCyclingClub2022-23.pdf?alt=media&token=4bdf6d42-12d3-4445-8d24-2f91300e4374" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCycling%20club%2FCyclingClub2020-21.pdf?alt=media&token=f1734bab-0beb-404c-b19f-79b6a1fda7df" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCycling%20club%2FCyclingClub2019-20.pdf?alt=media&token=89c1c9bf-2c4f-416b-b30e-e1050e4e6090" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCycling%20club%2FCyclingClub2018-19.pdf?alt=media&token=e1b94e60-db2b-49b9-aa19-fec1bf1b7cd7" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -763,23 +759,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="#" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="#" class="prior" id="research_year" target="_blank">2018-19</a>
                     </div>
 
                 </div>
@@ -843,24 +839,17 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCP%20club%2FCodingClub2022-23.pdf?alt=media&token=c19b0682-2ae7-422f-b2bf-f2e47084e726" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCP%20club%2FCodingClub2020-21.pdf?alt=media&token=566f2795-6c0f-45d6-89cf-bcf548ee779d" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FCP%20club%2FCodingClub2022-23.pdf?alt=media&token=c19b0682-2ae7-422f-b2bf-f2e47084e726" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
-                    </div>
+                    
 
                 </div>
             </div>
@@ -914,23 +903,23 @@
             <div class="clubcontent" id="but3">
                 <div class="actpoint">
                     <div class="item">
-                        <img src="vector 2.png"> <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2022-23</a>
+                        <img src="vector 2.png"> <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FNSS%2FNSS2022-23.pdf?alt=media&token=77830141-0aca-4ef8-a79d-b3c88ced8569" class="prior" id="research_year" target="_blank">2022-23</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2021-22</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FNSS%2FNSS2021-22.pdf?alt=media&token=2ab5075c-3d4d-49c5-ac42-504a577bb8c2" class="prior" id="research_year" target="_blank">2021-22</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2020-21</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FNSS%2FNSS2020-21.pdf?alt=media&token=14dd5f6f-32b6-4a5b-b984-2c74a4563008" class="prior" id="research_year" target="_blank">2020-21</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2019-20</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FNSS%2FNSS2019-20.pdf?alt=media&token=d7bb5266-4cff-4d63-9b6f-1fedb2adcacc" class="prior" id="research_year" target="_blank">2019-20</a>
                     </div>
                     <br>
                     <div class="item">
-                        <img src="vector 2.png">  <a href="https://www.aitpune.com/Documents/ASGE/Publication/Publications%202022-23.pdf" class="prior" id="research_year" target="_blank">2018-19</a>
+                        <img src="vector 2.png">  <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-CLUBS%2FNSS%2FNSS2017-18.pdf?alt=media&token=98b8d09c-012b-4813-9aa8-a833fe8cf6dc" class="prior" id="research_year" target="_blank">2017-18</a>
                     </div>
 
                 </div>
