collage email of teacher updated

--- a/Departments/IT/IT_FACULTY&STAFF.html
+++ b/Departments/IT/IT_FACULTY&STAFF.html
@@ -306,7 +306,7 @@
                 
                                 <div class="hidden-content">
                                     <p id="email">Email</p>
-                                    <p id="emailid">vaishalidharkar@gmail.com
+                                    <p id="emailid">vingale@aitpune.edu.in
 
                                     </p>
                                 
