--- a/Admission_principal.html
+++ b/Admission_principal.html
@@ -103,7 +103,7 @@
                 <div class="generalinfo">
                     <h2>Principal's Corner</h2>
                     <div class="hod_content2" id="jd_pic2">
-                        <div id="jd_pic" style="position: relative;"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ADMISSION%2Fprincipal%20pic.jpg?alt=media&token=017f1c9e-e9f9-4c51-8594-d9db584d7b9e"  style="position:absolute;margin-top: 30px;width:40px;margin-left: 30px;">
+                        <div id="jd_pic" style="position: relative;"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ADMISSION%2Fprincipal%20pic.jpg?alt=media&token=017f1c9e-e9f9-4c51-8594-d9db584d7b9e"  style="position:absolute;margin-top: 30px;width:40px;margin-left: 30px;" id="check">
                     
                         </div>
                         <div class="hod_contain" id="director_pic">
