--- a/mandatory/res.html
+++ b/mandatory/res.html
@@ -47,7 +47,7 @@
                     <li><a href="MHRD.html" target="_blank">MHRD IIC Certificate </a></li>
                </ol>
                 <p>Forms for Downloading</p>
-                <ul> <li><a href="/MandatoryForms.html" target="_blank">(Click Here)</a></li>
+                <ul> <li><a href="./MandatoryForms.html" target="_blank">(Click Here)</a></li>
             </div>
         </div>
     </div>
