--- a/Mandatory.html
+++ b/Mandatory.html
@@ -19,7 +19,7 @@
         <div class="topper">
           <div>
             <ul class="header_items">
-            <a href="ABOUT_US.html">About Us</a>
+            <a href="index.html">Home</a>
             <a href="Alumini.html">Alumini</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
@@ -38,6 +38,9 @@
           <div style="display: flex;" class="side">
             <nav id="navele" class="navele">
             <a href="ABOUT_US.html">About Us</a>
+            <!--  -->
+         <a href="Academics.html">Academics</a>
+         <!--  -->
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
