--- a/NAAC_IQAC.html
+++ b/NAAC_IQAC.html
@@ -40,6 +40,9 @@
           <div style="display: flex;" class="side">
             <nav id="navele" class="navele">
             <a href="ABOUT_US.html">About Us</a>
+            <!--  -->
+         <a href="Academics.html">Academics</a>
+         <!--  -->
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
