--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div>
         <ul class="header_items">
         <a href="index.html" id="highlight_items">Home</a>
+       
         <a href="Alumini.html">Alumni</a>
         <a href="PLACEMENT_T&P.html">Placements</a>
         <a href="CLUBS.html">Clubs</a>
@@ -37,6 +38,9 @@
       <div style="display: flex;" class="side">
         <nav id="navele" class="navele">
         <a href="ABOUT_US.html">About Us</a>
+         <!--  -->
+         <a href="Academics.html">Academics</a>
+         <!--  -->
         <a href="Admission1.html">Admissions</a>
         <a href="ResearchDean.html">Research</a>
         <a href="student.html">Students</a>
