--- a/Academics.html
+++ b/Academics.html
@@ -66,26 +66,22 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Electronics & Communication</p>
-                <p class="b"> "Currents of Creativity, Waves of Connectivity: Explore the Future with Us." </p>
-                <p class="c"> <a href="#main">Explore</a> </p>
+                <p class="a">Academics</p>
+                <p class="b">"Unlock your academic potential, one lesson at a time!"</p>
+                <p class="c"> <a href="#mainContect">Explore</a> </p>
             </div>
         </div>
        
         <div class="about_us">
             <div class="main_content">
-                <h2 class="ab" style="text-align: left;">About</h2>
-                <p class="about_vision">Vision</p>
-                <p class="about_content">To become "Internationally Recognized" center of excellence providing electronics & telecommunication engineering education & research facilities to the wards of defence personnel.</p>
-                <p class="about_mission">Mission</p>
-                <div class="about_list">
-                    <ul>
-                        <li>.Provide state-of-art facility, modern infrastructure and learning environment to the students and faculty in the department to meet growing challenges of electronics & allied industry.</li>
-                        <li>Equip students with fundamental knowledge & practical skills in electronics, communication & allied areas to excel in professional career & lifelong learning.</li>
-                        <li>.Foster research and innovation in electronics & telecommunication engineering by collaborating with industry and R&D organizations.</li>
-                        <li>Develop intellectuals, entrepreneurs and technology leaders committed to contribute to the development of society and welfare of humanity.</li>
-                    </ul>
-                </div>
+                <h2 class="ab" style="text-align: left;">Academics</h2>
+                <p class="about_vision">Overview</p>
+                <p class="about_content">Academics serve as the foundation for personal and professional growth, providing essential knowledge and skills necessary for success in various spheres of life. Through academic pursuits, individuals sharpen their critical thinking abilities, expand their intellectual horizons, and cultivate a lifelong love for learning, empowering them to navigate and contribute meaningfully to society's ever-evolving landscape.
+                    <br>
+                    <br>
+                Furthermore, a strong academic background not only enhances employability but also fosters a deeper understanding of the world, enabling individuals to tackle complex challenges and make informed decisions. Academic excellence instills discipline, resilience, and a thirst for knowledge, 
+                </p>
+                
             </div>
             <div class="about_image">
                 <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2FGp%20photo%202071.jpg?alt=media&token=fb801906-3863-412b-a3af-d467fc0884bb">
