--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -332,7 +332,7 @@
         </div>
         <div class="foothead">AIT Movie</div>
         <div class="footaitvideo">
-          <video src="" alt="" width="253" height="112" controls></video>
+          <video src="" alt="" class="footvideo" controls></video>
         </div>
       </div>
   
