--- a/student.html
+++ b/student.html
@@ -199,7 +199,7 @@
         </div>
         <div class="foothead">AIT Movie</div>
         <div class="footaitvideo">
-          <video src="" alt="" width="253" height="112" controls></video>
+          <video src="" alt="" class="footvideo" width="100%" controls></video>
         </div>
       </div>
   
